fix stretch images

--- a/src/components/Album/Album.css
+++ b/src/components/Album/Album.css
@@ -2,7 +2,7 @@
   background-color: white;
   color: black;
   width: 200px;
-  height: 300px;
+  height: 350px;
   position: relative;
   border: 1px solid gray;
   cursor: initial;
